fix(fonts): fix id overflowing

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -4,6 +4,7 @@
 @import '~fontsource-ibm-plex-sans/500-normal.css';
 @import '~fontsource-ibm-plex-sans/700-normal.css';
 @import '~fontsource-ibm-plex-sans/700-italic.css';
+@import '@fontsource/ibm-plex-mono/500.css';
 @import 'variables';
 
 %face-sans-20-bold {
@@ -111,8 +112,8 @@
   line-height: 16px;
 }
 
-%face-sans-10-medium {
-  font-family: $font-sans;
+%face-mono-10-medium {
+  font-family: $font-mono;
   font-weight: 500;
   font-size: 10px;
   line-height: 16px;
