--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $phone-width: 480px;
 
 $base-font-size: 16px;
 $font-sans: 'IBM Plex Sans', sans-serif;
+$font-mono: 'IBM Plex Mono';
 
 $color-white: #fff;
 $color-black: #000;
